changing color of pass

--- a/index.css
+++ b/index.css
@@ -112,6 +112,6 @@ button:hover {
 }
 
 .pass:hover {
-    background-color: #9afcbe;
-    color: #273549;
+    background-color: #b8fed2;
+    color: #29384d;
 }
